[package]
name = "kessard2"
version = "0.1.0"
edition = "2021"
rust-version = "1.66"

[dependencies]
actix-web = { version = "4.3.0", default-features = false, features = [
    "macros",
] }
futures-util = "0.3.25"
reqwest = "0.11.14"
reqwest-middleware = "0.2.0"
serde = { version = "1.0.152", features = ["derive"] }
slog = "2.7.0"
slog-term = "2.9.0"
tokio = { version = "1.24.2", features = ["rt-multi-thread", "macros"] }
